--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -17,6 +17,24 @@
     font-family: 'romanabt';
 }
 
+@font-face {
+    font-family: 'maisonneue';
+    src: url('../font/maison-neue.ttf');
+}
+
+@font-face {
+    font-family: 'maisonneuebk';
+    src: url('../font/fonnts.com-Maison_Neue_Book.ttf');
+}
+
+.maisonneue{
+    font-family: 'maisonneue';
+}
+
+.maisonneuebk{
+    font-family: 'maisonneuebk';
+}
+
 @keyframes infiniteScroll {
     0%{
         transform: translateX(0);
@@ -43,6 +61,7 @@
 .prose ul {
   list-style-type: disc !important;
   margin-left: 28px;
+  font-family: 'maisonneue';
 }
 
 .hide-scrollbar::-webkit-scrollbar{
